# app/Swagger/Schemas/PaginationLinks.php
@@ -1,0 +1,7 @@
+<?php
+
+namespace App\Swagger\Schemas;
+
+class PaginationLinks
+{
+}
