# app/Swagger/Schemas/PaginationMeta.php
@@ -1,0 +1,7 @@
+<?php
+
+namespace App\Swagger\Schemas;
+
+class PaginationMeta
+{
+}
